@@ -1,9 +1,5 @@
 #include "config.h"
 
-#ifdef __cplusplus
-extern "C" {
-#endif
-
 #include <libgimp/gimp.h>
 
 /* FIXME */
@@ -17,9 +13,8 @@ extern "C" {
 #include "EXTERN.h"
 #include "perl.h"
 #include "XSUB.h"
-#ifdef __cplusplus
-}
-#endif
+#define NEED_newCONSTSUB
+#include "ppport.h"
 
 /* FIXME */
 /* dirty is used in gimp.h.  */
@@ -35,43 +30,6 @@ extern "C" {
 
 /* expect iso-c here.  */
 #include <signal.h>
-
-/* Shamelesssly stolen from IO.xs.  See perlguts, this is only for
- * 5.004 compatibility.
- */
-#ifndef newCONSTSUB
-static void
-newCONSTSUB(stash,name,sv)
-    HV *stash;
-    char *name;
-    SV *sv;
-{
-#ifdef dTHR
-    dTHR;
-#endif
-    U32 oldhints = hints;
-    HV *old_cop_stash = curcop->cop_stash;
-    HV *old_curstash = curstash;
-    line_t oldline = curcop->cop_line;
-    curcop->cop_line = copline;
-
-    hints &= ~HINT_BLOCK_SCOPE;
-    if(stash)
-	curstash = curcop->cop_stash = stash;
-
-    newSUB(
-	start_subparse (FALSE, 0),
-	newSVOP(OP_CONST, 0, newSVpv(name,0)),
-	newSVOP(OP_CONST, 0, &sv_no),	/* SvPV(&sv_no) == "" -- GMB */
-	newSTATEOP(0, Nullch, newSVOP(OP_CONST, 0, sv))
-    );
-
-    hints = oldhints;
-    curcop->cop_stash = old_cop_stash;
-    curstash = old_curstash;
-    curcop->cop_line = oldline;
-}
-#endif
 
 MODULE = Gimp	PACKAGE = Gimp
 
